[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polypi-pure"
version = "1.0.0"
description = "PolyPi Pure — PolyPy + DYTX fullstack runtime (FastAPI backend + vanilla JS dashboard)"
readme = "README.md"
license = "MIT"
authors = [
  { name = "chuckyLeeVIII", email = "chuckyLeeVIII@users.noreply.github.com" }
]
keywords = [
  "micropython", "thonny", "polypy", "dytx",
  "embedded", "rp2040", "esp32", "asm", "firmware",
  "fastapi", "fullstack", "pure", "polypi"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: Software Development :: Compilers",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Framework :: FastAPI",
]
requires-python = ">=3.10"

[project.optional-dependencies]
# Core library (pure Python mode, no hardware needed)
core = []

# Fullstack: run the FastAPI backend + serve the dashboard
fullstack = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
]

# Development + testing
dev = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
  "httpx>=0.27",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.urls]
Homepage   = "https://github.com/chuckyLeeVIII/polypy"
Repository = "https://github.com/chuckyLeeVIII/polypy"
Issues     = "https://github.com/chuckyLeeVIII/polypy/issues"

[project.scripts]
# CLI entry: `polypi-serve` launches the FastAPI backend via uvicorn
polypi-serve = "backend.app:start"

[tool.hatch.build.targets.wheel]
packages = ["dytx", "backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
